[workspace]
members = [
    "rustynom",
    "rustynom_macros"
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3               # Highest level of optimization.
lto = "fat"                 # Enable link-time optimization.
overflow-checks = false     # Disable integer overflow checks.
incremental = true          # Enable incremental compilation for faster builds.
